--- a/sites/all/themes/subtheme/less/content.less
+++ b/sites/all/themes/subtheme/less/content.less
@@ -28,9 +28,115 @@ body {
 
 .page-banner {
   width: 100%;
-  height: 400px;
   background-image: url('../images/background.jpg');
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center top;
   background-size: cover;
+}
+
+.front .page-banner {
+  height: 400px;
+}
+
+.not-front .page-banner {
+  height: 200px;
+}
+
+.front .page-header {
+  display: none;
+}
+
+.page-header {
+}
+
+#node-3 {
+}
+
+#navbar {
+  margin-top: 5px;
+}
+
+.view-news {
+  .views-field-title {
+    font-size: @font-size-h4;
+  }
+  .views-field-created {
+    color: lighten(@text-color, 40%);
+    font-size: @font-size-small;
+    margin-bottom: 5px;
+  }
+  .views-row {
+    margin-top: 15px;
+  }
+  .views-field-field-news-image {
+    float: left;
+    padding: 0 30px 15px 0;
+  }
+}
+
+.view-directions {
+  text-align: center;
+  .views-field-title {
+    font-size: @font-size-h5;
+  }
+  .views-field-field-directions-image {
+    img {
+      margin: 10px auto;
+    }
+  }
+  .col {
+    margin-bottom: 15px;
+  }
+}
+
+.view-catalog {
+  .views-field-title {
+    font-size: @font-size-h4;
+    margin-bottom: 10px;
+  }
+  .views-field-field-equipment-image {
+    float: left;
+    padding: 0 30px 15px 0;
+  }
+}
+
+.main-container {
+  background-color: @gray-lighter;
+}
+
+.main-block {
+  background-color: #fff;
+  padding: 30px;
+  -webkit-box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  -moz-box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+}
+
+.footer {
+  color: rgb(209, 214, 217);
+  background: #2d3237;
+  margin-top: 0;
+  .block-title {
+    font-size: @font-size-h5;
+  }
+  .glyphicon {
+    margin-right: 10px;
+  }
+}
+
+#block-menu-menu-jrj- {
+  .block-title {
+    display: none;
+  }
+}
+
+.node-equipment {
+  .field-name-field-equipment-image {
+    float: left;
+    padding: 0 30px 15px 0;
+  }
 }
