--- a/sites/all/themes/subtheme/less/content.less
+++ b/sites/all/themes/subtheme/less/content.less
@@ -100,6 +100,17 @@ body {
   }
 }
 
+.view-works {
+  .col {
+    text-align: center;
+    margin-bottom: 15px;
+  }
+  .views-field-field-work-image img {
+    margin: auto;
+    margin-bottom: 10px;
+  }
+}
+
 .main-container {
   background-color: @gray-lighter;
 }
@@ -139,4 +150,32 @@ body {
     float: left;
     padding: 0 30px 15px 0;
   }
+}
+
+.top-region {
+  background-color: #647382;
+  border-bottom: 1px solid #32a0ff;
+  height: 40px;
+}
+
+#block-block-1 {
+  float: right;
+  h2, div {
+    float: left;
+    line-height: 30px;
+  }
+  a {
+    color: #fff;
+    margin: 5px 5px 0;
+    display: inline-block;
+  }
+  span {
+    color: #fff;
+    margin: 6px 0 0 10px;
+    display: inline-block;
+  }
+}
+
+.node-webform {
+  margin-bottom: 30px;
 }
