--- a/sites/all/themes/subtheme/less/content.less
+++ b/sites/all/themes/subtheme/less/content.less
@@ -179,3 +179,13 @@ body {
 .node-webform {
   margin-bottom: 30px;
 }
+
+#block-block-2 {
+  margin-top: 50px;
+  p {
+    margin-bottom: 15px;
+  }
+  .glyphicon {
+    margin-right: 5px;
+  }
+}
