--- a/sites/all/themes/subtheme/css/style.css
+++ b/sites/all/themes/subtheme/css/style.css
@@ -3555,7 +3555,7 @@ tbody.collapse.in {
 .dropdown-menu > li > a:focus {
   text-decoration: none;
   color: #262626;
-  background-color: #f5f5f5;
+  background-color: #efefef;
 }
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
@@ -7313,7 +7313,7 @@ body {
   border-bottom: 5px solid #0096ff;
 }
 .navbar-brand {
-  font-size: 40px;
+  font-size: 36px;
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -7363,11 +7363,13 @@ body {
 .view-directions .col {
   margin-bottom: 15px;
 }
-.view-catalog .views-field-title {
+.view-catalog .views-field-title,
+.view-taxonomy-term .views-field-title {
   font-size: 20px;
   margin-bottom: 10px;
 }
-.view-catalog .views-field-field-equipment-image {
+.view-catalog .views-field-field-equipment-image,
+.view-taxonomy-term .views-field-field-equipment-image {
   float: left;
   padding: 0 30px 15px 0;
 }
@@ -7445,4 +7447,12 @@ body {
 }
 #block-block-2 .glyphicon {
   margin-right: 5px;
+}
+@media (min-width: 979px) {
+  ul.nav li.dropdown:hover > ul.dropdown-menu {
+    display: block;
+  }
+}
+.navbar-nav > li > .dropdown-menu {
+  margin-top: 4px;
 }
