Add documents type and styles

--- a/sites/all/themes/subtheme/css/style.css
+++ b/sites/all/themes/subtheme/css/style.css
@@ -7456,3 +7456,6 @@ body {
 .navbar-nav > li > .dropdown-menu {
   margin-top: 4px;
 }
+.view-documents .views-field-title {
+  text-align: center;
+}
