--- a/sites/all/themes/subtheme/less/content.less
+++ b/sites/all/themes/subtheme/less/content.less
@@ -199,3 +199,7 @@ body {
 .navbar-nav > li > .dropdown-menu {
   margin-top: 4px;
 }
+
+.view-documents .views-field-title {
+  text-align: center;
+}
